2002-11-20  Mo DeJong  <mdejong@uncounted.org>

	* INSTALL.TXT: Inform users that GNU tools
	are required to build Source-Navigator.
	* configure: Regen.
	* configure.in: Require GNU flex and
	bison when building.
	* hyper/Makefile.am: Remove generated
	.c files as a results of 'make clean'.
	* hyper/Makefile.in: Regen.
	* parsers/assembly/ppc601-eabi/Makefile.am: Add
	missing backslash.
	* parsers/assembly/ppc601-eabi/Makefile.in: Regen.
	* parsers/m4/Makefile.am: Add missing backslash.
	* parsers/m4/Makefile.in: Regen.

2002-11-19  Mo DeJong  <mdejong@uncounted.org>

	* patches/tcl_pascal.patch: Add patch to
	get rid of crashes that show up under
	windows when launching emacs. This patch
	was already added to the CVS but it is
	needed for the released 5.1 sources.

2002-11-16  Mo DeJong  <mdejong@uncounted.org>

	* gui/editorpane.tcl (m3_post_menu_update):
	Invert undo menu state so that it is normal
	when the file has changed.
	* gui/multiview.tcl (edit_post): Make the
	state of the undo and redo menu items
	depend on the -file_changed option from
	the editor to match the implementation
	in the editor class.

2002-11-15  Mo DeJong  <mdejong@uncounted.org>

	* db/dbimp.c (check_running): Add declaration
	of kill function when compiling under Win32.
	Fix check_running comment since this method
	does not check for the process using a socket.
	Reverse order of arguments to kill.
	* db/dbutils.c (kill): Reverse order of
	arguments to Win32 version of kill so they
	match the Unix implementation.

2002-11-14  Mo DeJong  <mdejong@uncounted.org>

	* gui/editorpane.tcl (toolbar_grep): Invoke search_grep
	method from the multiwin parent instead of broken
	sn_grep procedure. [Bug 610449]

2002-11-10  Mo DeJong  <mdejong@uncounted.org>

	* gui/makepane.tcl (ExecMake): Pipe stdout
	and stderr from make to cat and read the
	results from the pipe. The old code used
	2>@stdout in an attempt to do this, but
	that fails under Windows with Tcl 8.3.
